// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Group Add button top, default label, medium Render widget 1`] = `
<div>
  <section
    class="survey-group"
  >
    <div
      class="content-container"
    >
      <div
        class="survey-group__content"
      >
        <h2
          class="survey-group__title"
        >
          myGroup.title
        </h2>
        <div
          class="center"
        >
          <button
            class="button blue center small"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-circle-plus faIconLeft"
              data-icon="circle-plus"
              data-prefix="fas"
              role="img"
              viewBox="0 0 512 512"
            >
              <path
                d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM232 344l0-64-64 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l64 0 0-64c0-13.3 10.7-24 24-24s24 10.7 24 24l0 64 64 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-64 0 0 64c0 13.3-10.7 24-24 24s-24-10.7-24-24z"
                fill="currentColor"
              />
            </svg>
            myGroup.addGroupedObject
          </button>
        </div>
        <div
          class="survey-group-object"
        >
          <div
            class="content-container"
          >
            <div
              class="survey-group-object__content"
            >
              <div
                class="survey-section__text"
              >
                <div
                  class="left "
                >
                  <markdown
                    remarkplugins="remark-gfm,[object Object]"
                  >
                    This is a text widget
                  </markdown>
                </div>
              </div>
              <div
                class="apptr__form-container question-type-string question-filled"
                style="position: relative;"
              >
                <div
                  class="apptr__form-label-container"
                >
                  <label
                    for="survey-question__myGroups.obj0Uuid.quest"
                  >
                    <div
                      class="label"
                    >
                      <markdown>
                        Test Question Label
                      </markdown>
                    </div>
                  </label>
                </div>
                <div
                  class="apptr__form-input-container "
                >
                  <input
                    autocomplete="none"
                    class="apptr__form-input apptr__input-string input-large"
                    id="survey-question__myGroups.obj0Uuid.quest"
                    maxlength="255"
                    name="survey-question__myGroups.obj0Uuid.quest"
                    style="text-transform: none;"
                    type="text"
                    value="Some answer"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="survey-group-object"
        >
          <div
            class="content-container"
          >
            <div
              class="survey-group-object__content"
            >
              <div
                class="survey-section__text"
              >
                <div
                  class="left "
                >
                  <markdown
                    remarkplugins="remark-gfm,[object Object]"
                  >
                    This is a text widget
                  </markdown>
                </div>
              </div>
              <div
                class="apptr__form-container question-type-string question-filled"
                style="position: relative;"
              >
                <div
                  class="apptr__form-label-container"
                >
                  <label
                    for="survey-question__myGroups.obj1Uuid.quest"
                  >
                    <div
                      class="label"
                    >
                      <markdown>
                        Test Question Label
                      </markdown>
                    </div>
                  </label>
                </div>
                <div
                  class="apptr__form-input-container "
                >
                  <input
                    autocomplete="none"
                    class="apptr__form-input apptr__input-string input-large"
                    id="survey-question__myGroups.obj1Uuid.quest"
                    maxlength="255"
                    name="survey-question__myGroups.obj1Uuid.quest"
                    style="text-transform: none;"
                    type="text"
                    value="Some other answer"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="survey-group-object"
        >
          <div
            class="content-container"
          >
            <div
              class="survey-group-object__content"
            >
              <div
                class="survey-section__text"
              >
                <div
                  class="left "
                >
                  <markdown
                    remarkplugins="remark-gfm,[object Object]"
                  >
                    This is a text widget
                  </markdown>
                </div>
              </div>
              <div
                class="apptr__form-container question-type-string question-filled"
                style="position: relative;"
              >
                <div
                  class="apptr__form-label-container"
                >
                  <label
                    for="survey-question__myGroups.obj2Uuid.quest"
                  >
                    <div
                      class="label"
                    >
                      <markdown>
                        Test Question Label
                      </markdown>
                    </div>
                  </label>
                </div>
                <div
                  class="apptr__form-input-container "
                >
                  <input
                    autocomplete="none"
                    class="apptr__form-input apptr__input-string input-large"
                    id="survey-question__myGroups.obj2Uuid.quest"
                    maxlength="255"
                    name="survey-question__myGroups.obj2Uuid.quest"
                    style="text-transform: none;"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Group All values set, all true, add button default data, filter show all Render widget 1`] = `
<div>
  <section
    class="survey-group"
  >
    <div
      class="content-container"
    >
      <div
        class="survey-group__content"
      >
        <h2
          class="survey-group__title"
        >
          Group Title
        </h2>
        <div
          class="center"
        >
          <button
            class="button blue center small"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-circle-plus faIconLeft"
              data-icon="circle-plus"
              data-prefix="fas"
              role="img"
              viewBox="0 0 512 512"
            >
              <path
                d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM232 344l0-64-64 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l64 0 0-64c0-13.3 10.7-24 24-24s24 10.7 24 24l0 64 64 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-64 0 0 64c0 13.3-10.7 24-24 24s-24-10.7-24-24z"
                fill="currentColor"
              />
            </svg>
            Add a new grouped object in my group
          </button>
        </div>
        <div
          class="survey-group-object"
        >
          <div
            class="content-container"
          >
            <div
              class="survey-group-object__content"
            >
              <h3
                class="survey-group-object__title"
              >
                <markdown
                  remarkplugins="remark-gfm,[object Object]"
                >
                  Grouped object at index 0
                </markdown>
              </h3>
              <div
                class="center"
              >
                <button
                  class="button red small"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-trash-can faIconLeft"
                    data-icon="trash-can"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 448 512"
                  >
                    <path
                      d="M136.7 5.9C141.1-7.2 153.3-16 167.1-16l113.9 0c13.8 0 26 8.8 30.4 21.9L320 32 416 32c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 96C14.3 96 0 81.7 0 64S14.3 32 32 32l96 0 8.7-26.1zM32 144l384 0 0 304c0 35.3-28.7 64-64 64L96 512c-35.3 0-64-28.7-64-64l0-304zm88 64c-13.3 0-24 10.7-24 24l0 192c0 13.3 10.7 24 24 24s24-10.7 24-24l0-192c0-13.3-10.7-24-24-24zm104 0c-13.3 0-24 10.7-24 24l0 192c0 13.3 10.7 24 24 24s24-10.7 24-24l0-192c0-13.3-10.7-24-24-24zm104 0c-13.3 0-24 10.7-24 24l0 192c0 13.3 10.7 24 24 24s24-10.7 24-24l0-192c0-13.3-10.7-24-24-24z"
                      fill="currentColor"
                    />
                  </svg>
                  Delete this grouped object from my group
                </button>
              </div>
              <div
                class="survey-section__text"
              >
                <div
                  class="left "
                >
                  <markdown
                    remarkplugins="remark-gfm,[object Object]"
                  >
                    This is a text widget
                  </markdown>
                </div>
              </div>
              <div
                class="apptr__form-container question-type-string question-filled"
                style="position: relative;"
              >
                <div
                  class="apptr__form-label-container"
                >
                  <label
                    for="survey-question__myGroups.obj0Uuid.quest"
                  >
                    <div
                      class="label"
                    >
                      <markdown>
                        Test Question Label
                      </markdown>
                    </div>
                  </label>
                </div>
                <div
                  class="apptr__form-input-container "
                >
                  <input
                    autocomplete="none"
                    class="apptr__form-input apptr__input-string input-large"
                    id="survey-question__myGroups.obj0Uuid.quest"
                    maxlength="255"
                    name="survey-question__myGroups.obj0Uuid.quest"
                    style="text-transform: none;"
                    type="text"
                    value="Some answer"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="survey-group-object"
        >
          <div
            class="content-container"
          >
            <div
              class="survey-group-object__content"
            >
              <h3
                class="survey-group-object__title"
              >
                <markdown
                  remarkplugins="remark-gfm,[object Object]"
                >
                  Grouped object at index 1
                </markdown>
              </h3>
              <div
                class="center"
              >
                <button
                  class="button red small"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-trash-can faIconLeft"
                    data-icon="trash-can"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 448 512"
                  >
                    <path
                      d="M136.7 5.9C141.1-7.2 153.3-16 167.1-16l113.9 0c13.8 0 26 8.8 30.4 21.9L320 32 416 32c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 96C14.3 96 0 81.7 0 64S14.3 32 32 32l96 0 8.7-26.1zM32 144l384 0 0 304c0 35.3-28.7 64-64 64L96 512c-35.3 0-64-28.7-64-64l0-304zm88 64c-13.3 0-24 10.7-24 24l0 192c0 13.3 10.7 24 24 24s24-10.7 24-24l0-192c0-13.3-10.7-24-24-24zm104 0c-13.3 0-24 10.7-24 24l0 192c0 13.3 10.7 24 24 24s24-10.7 24-24l0-192c0-13.3-10.7-24-24-24zm104 0c-13.3 0-24 10.7-24 24l0 192c0 13.3 10.7 24 24 24s24-10.7 24-24l0-192c0-13.3-10.7-24-24-24z"
                      fill="currentColor"
                    />
                  </svg>
                  Delete this grouped object from my group
                </button>
              </div>
              <div
                class="survey-section__text"
              >
                <div
                  class="left "
                >
                  <markdown
                    remarkplugins="remark-gfm,[object Object]"
                  >
                    This is a text widget
                  </markdown>
                </div>
              </div>
              <div
                class="apptr__form-container question-type-string question-filled"
                style="position: relative;"
              >
                <div
                  class="apptr__form-label-container"
                >
                  <label
                    for="survey-question__myGroups.obj1Uuid.quest"
                  >
                    <div
                      class="label"
                    >
                      <markdown>
                        Test Question Label
                      </markdown>
                    </div>
                  </label>
                </div>
                <div
                  class="apptr__form-input-container "
                >
                  <input
                    autocomplete="none"
                    class="apptr__form-input apptr__input-string input-large"
                    id="survey-question__myGroups.obj1Uuid.quest"
                    maxlength="255"
                    name="survey-question__myGroups.obj1Uuid.quest"
                    style="text-transform: none;"
                    type="text"
                    value="Some other answer"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="survey-group-object"
        >
          <div
            class="content-container"
          >
            <div
              class="survey-group-object__content"
            >
              <h3
                class="survey-group-object__title"
              >
                <markdown
                  remarkplugins="remark-gfm,[object Object]"
                >
                  Grouped object at index 2
                </markdown>
              </h3>
              <div
                class="center"
              >
                <button
                  class="button red small"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-trash-can faIconLeft"
                    data-icon="trash-can"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 448 512"
                  >
                    <path
                      d="M136.7 5.9C141.1-7.2 153.3-16 167.1-16l113.9 0c13.8 0 26 8.8 30.4 21.9L320 32 416 32c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 96C14.3 96 0 81.7 0 64S14.3 32 32 32l96 0 8.7-26.1zM32 144l384 0 0 304c0 35.3-28.7 64-64 64L96 512c-35.3 0-64-28.7-64-64l0-304zm88 64c-13.3 0-24 10.7-24 24l0 192c0 13.3 10.7 24 24 24s24-10.7 24-24l0-192c0-13.3-10.7-24-24-24zm104 0c-13.3 0-24 10.7-24 24l0 192c0 13.3 10.7 24 24 24s24-10.7 24-24l0-192c0-13.3-10.7-24-24-24zm104 0c-13.3 0-24 10.7-24 24l0 192c0 13.3 10.7 24 24 24s24-10.7 24-24l0-192c0-13.3-10.7-24-24-24z"
                      fill="currentColor"
                    />
                  </svg>
                  Delete this grouped object from my group
                </button>
              </div>
              <div
                class="survey-section__text"
              >
                <div
                  class="left "
                >
                  <markdown
                    remarkplugins="remark-gfm,[object Object]"
                  >
                    This is a text widget
                  </markdown>
                </div>
              </div>
              <div
                class="apptr__form-container question-type-string question-filled"
                style="position: relative;"
              >
                <div
                  class="apptr__form-label-container"
                >
                  <label
                    for="survey-question__myGroups.obj2Uuid.quest"
                  >
                    <div
                      class="label"
                    >
                      <markdown>
                        Test Question Label
                      </markdown>
                    </div>
                  </label>
                </div>
                <div
                  class="apptr__form-input-container "
                >
                  <input
                    autocomplete="none"
                    class="apptr__form-input apptr__input-string input-large"
                    id="survey-question__myGroups.obj2Uuid.quest"
                    maxlength="255"
                    name="survey-question__myGroups.obj2Uuid.quest"
                    style="text-transform: none;"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="center"
        >
          <button
            class="button blue center small"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-circle-plus faIconLeft"
              data-icon="circle-plus"
              data-prefix="fas"
              role="img"
              viewBox="0 0 512 512"
            >
              <path
                d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM232 344l0-64-64 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l64 0 0-64c0-13.3 10.7-24 24-24s24 10.7 24 24l0 64 64 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-64 0 0 64c0 13.3-10.7 24-24 24s-24-10.7-24-24z"
                fill="currentColor"
              />
            </svg>
            Add a new grouped object in my group
          </button>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Group All values set, false when possible Render widget 1`] = `
<div>
  <section
    class="survey-group"
  >
    <div
      class="content-container"
    >
      <div
        class="survey-group__content"
      >
        <div
          class="survey-group-object"
        >
          <div
            class="content-container"
          >
            <div
              class="survey-group-object__content"
            >
              <h3
                class="survey-group-object__title"
              >
                <markdown
                  remarkplugins="remark-gfm,[object Object]"
                >
                  Grouped object at index 0
                </markdown>
              </h3>
              <div
                class="survey-section__text"
              >
                <div
                  class="left "
                >
                  <markdown
                    remarkplugins="remark-gfm,[object Object]"
                  >
                    This is a text widget
                  </markdown>
                </div>
              </div>
              <div
                class="apptr__form-container question-type-string question-filled"
                style="position: relative;"
              >
                <div
                  class="apptr__form-label-container"
                >
                  <label
                    for="survey-question__myGroups.obj0Uuid.quest"
                  >
                    <div
                      class="label"
                    >
                      <markdown>
                        Test Question Label
                      </markdown>
                    </div>
                  </label>
                </div>
                <div
                  class="apptr__form-input-container "
                >
                  <input
                    autocomplete="none"
                    class="apptr__form-input apptr__input-string input-large"
                    id="survey-question__myGroups.obj0Uuid.quest"
                    maxlength="255"
                    name="survey-question__myGroups.obj0Uuid.quest"
                    style="text-transform: none;"
                    type="text"
                    value="Some answer"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="survey-group-object"
        >
          <div
            class="content-container"
          >
            <div
              class="survey-group-object__content"
            >
              <h3
                class="survey-group-object__title"
              >
                <markdown
                  remarkplugins="remark-gfm,[object Object]"
                >
                  Grouped object at index 1
                </markdown>
              </h3>
              <div
                class="survey-section__text"
              >
                <div
                  class="left "
                >
                  <markdown
                    remarkplugins="remark-gfm,[object Object]"
                  >
                    This is a text widget
                  </markdown>
                </div>
              </div>
              <div
                class="apptr__form-container question-type-string question-filled"
                style="position: relative;"
              >
                <div
                  class="apptr__form-label-container"
                >
                  <label
                    for="survey-question__myGroups.obj1Uuid.quest"
                  >
                    <div
                      class="label"
                    >
                      <markdown>
                        Test Question Label
                      </markdown>
                    </div>
                  </label>
                </div>
                <div
                  class="apptr__form-input-container "
                >
                  <input
                    autocomplete="none"
                    class="apptr__form-input apptr__input-string input-large"
                    id="survey-question__myGroups.obj1Uuid.quest"
                    maxlength="255"
                    name="survey-question__myGroups.obj1Uuid.quest"
                    style="text-transform: none;"
                    type="text"
                    value="Some other answer"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="survey-group-object"
        >
          <div
            class="content-container"
          >
            <div
              class="survey-group-object__content"
            >
              <h3
                class="survey-group-object__title"
              >
                <markdown
                  remarkplugins="remark-gfm,[object Object]"
                >
                  Grouped object at index 2
                </markdown>
              </h3>
              <div
                class="survey-section__text"
              >
                <div
                  class="left "
                >
                  <markdown
                    remarkplugins="remark-gfm,[object Object]"
                  >
                    This is a text widget
                  </markdown>
                </div>
              </div>
              <div
                class="apptr__form-container question-type-string question-filled"
                style="position: relative;"
              >
                <div
                  class="apptr__form-label-container"
                >
                  <label
                    for="survey-question__myGroups.obj2Uuid.quest"
                  >
                    <div
                      class="label"
                    >
                      <markdown>
                        Test Question Label
                      </markdown>
                    </div>
                  </label>
                </div>
                <div
                  class="apptr__form-input-container "
                >
                  <input
                    autocomplete="none"
                    class="apptr__form-input apptr__input-string input-large"
                    id="survey-question__myGroups.obj2Uuid.quest"
                    maxlength="255"
                    name="survey-question__myGroups.obj2Uuid.quest"
                    style="text-transform: none;"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Group Conditional false, should not display Render widget 1`] = `<div />`;

exports[`Group Default values Render widget 1`] = `
<div>
  <section
    class="survey-group"
  >
    <div
      class="content-container"
    >
      <div
        class="survey-group__content"
      >
        <h2
          class="survey-group__title"
        >
          myGroup.title
        </h2>
        <div
          class="survey-group-object"
        >
          <div
            class="content-container"
          >
            <div
              class="survey-group-object__content"
            >
              <div
                class="survey-section__text"
              >
                <div
                  class="left "
                >
                  <markdown
                    remarkplugins="remark-gfm,[object Object]"
                  >
                    This is a text widget
                  </markdown>
                </div>
              </div>
              <div
                class="apptr__form-container question-type-string question-filled"
                style="position: relative;"
              >
                <div
                  class="apptr__form-label-container"
                >
                  <label
                    for="survey-question__myGroups.obj0Uuid.quest"
                  >
                    <div
                      class="label"
                    >
                      <markdown>
                        Test Question Label
                      </markdown>
                    </div>
                  </label>
                </div>
                <div
                  class="apptr__form-input-container "
                >
                  <input
                    autocomplete="none"
                    class="apptr__form-input apptr__input-string input-large"
                    id="survey-question__myGroups.obj0Uuid.quest"
                    maxlength="255"
                    name="survey-question__myGroups.obj0Uuid.quest"
                    style="text-transform: none;"
                    type="text"
                    value="Some answer"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="survey-group-object"
        >
          <div
            class="content-container"
          >
            <div
              class="survey-group-object__content"
            >
              <div
                class="survey-section__text"
              >
                <div
                  class="left "
                >
                  <markdown
                    remarkplugins="remark-gfm,[object Object]"
                  >
                    This is a text widget
                  </markdown>
                </div>
              </div>
              <div
                class="apptr__form-container question-type-string question-filled"
                style="position: relative;"
              >
                <div
                  class="apptr__form-label-container"
                >
                  <label
                    for="survey-question__myGroups.obj1Uuid.quest"
                  >
                    <div
                      class="label"
                    >
                      <markdown>
                        Test Question Label
                      </markdown>
                    </div>
                  </label>
                </div>
                <div
                  class="apptr__form-input-container "
                >
                  <input
                    autocomplete="none"
                    class="apptr__form-input apptr__input-string input-large"
                    id="survey-question__myGroups.obj1Uuid.quest"
                    maxlength="255"
                    name="survey-question__myGroups.obj1Uuid.quest"
                    style="text-transform: none;"
                    type="text"
                    value="Some other answer"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="survey-group-object"
        >
          <div
            class="content-container"
          >
            <div
              class="survey-group-object__content"
            >
              <div
                class="survey-section__text"
              >
                <div
                  class="left "
                >
                  <markdown
                    remarkplugins="remark-gfm,[object Object]"
                  >
                    This is a text widget
                  </markdown>
                </div>
              </div>
              <div
                class="apptr__form-container question-type-string question-filled"
                style="position: relative;"
              >
                <div
                  class="apptr__form-label-container"
                >
                  <label
                    for="survey-question__myGroups.obj2Uuid.quest"
                  >
                    <div
                      class="label"
                    >
                      <markdown>
                        Test Question Label
                      </markdown>
                    </div>
                  </label>
                </div>
                <div
                  class="apptr__form-input-container "
                >
                  <input
                    autocomplete="none"
                    class="apptr__form-input apptr__input-string input-large"
                    id="survey-question__myGroups.obj2Uuid.quest"
                    maxlength="255"
                    name="survey-question__myGroups.obj2Uuid.quest"
                    style="text-transform: none;"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="center"
        >
          <button
            class="button blue center large"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-circle-plus faIconLeft"
              data-icon="circle-plus"
              data-prefix="fas"
              role="img"
              viewBox="0 0 512 512"
            >
              <path
                d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM232 344l0-64-64 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l64 0 0-64c0-13.3 10.7-24 24-24s24 10.7 24 24l0 64 64 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-64 0 0 64c0 13.3-10.7 24-24 24s-24-10.7-24-24z"
                fill="currentColor"
              />
            </svg>
            myGroup.addGroupedObject
          </button>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Group Nested groups, should display widgets with right path 1`] = `
<div>
  <section
    class="survey-group"
  >
    <div
      class="content-container"
    >
      <div
        class="survey-group__content"
      >
        <h2
          class="survey-group__title"
        >
          myGroup.title
        </h2>
        <div
          class="survey-group-object"
        >
          <div
            class="content-container"
          >
            <div
              class="survey-group-object__content"
            >
              <h3
                class="survey-group-object__title"
              >
                <markdown
                  remarkplugins="remark-gfm,[object Object]"
                >
                  Grouped object at index 0
                </markdown>
              </h3>
              <section
                class="survey-group"
              >
                <div
                  class="content-container"
                >
                  <div
                    class="survey-group__content"
                  >
                    <h2
                      class="survey-group__title"
                    >
                      Nested group title
                    </h2>
                    <div
                      class="survey-group-object"
                    >
                      <div
                        class="content-container"
                      >
                        <div
                          class="survey-group-object__content"
                        >
                          <h3
                            class="survey-group-object__title"
                          >
                            <markdown
                              remarkplugins="remark-gfm,[object Object]"
                            >
                              Nested object at index 0
                            </markdown>
                          </h3>
                          <div
                            class="survey-section__text"
                          >
                            <div
                              class="left "
                            >
                              <markdown
                                remarkplugins="remark-gfm,[object Object]"
                              >
                                This is a text widget
                              </markdown>
                            </div>
                          </div>
                          <div
                            class="apptr__form-container question-type-string question-filled"
                            style="position: relative;"
                          >
                            <div
                              class="apptr__form-label-container"
                            >
                              <label
                                for="survey-question__myGroups.obj0Uuid.myNestedGroups.nestedObj0Uuid.quest"
                              >
                                <div
                                  class="label"
                                >
                                  <markdown>
                                    Test Question Label
                                  </markdown>
                                </div>
                              </label>
                            </div>
                            <div
                              class="apptr__form-input-container "
                            >
                              <input
                                autocomplete="none"
                                class="apptr__form-input apptr__input-string input-large"
                                id="survey-question__myGroups.obj0Uuid.myNestedGroups.nestedObj0Uuid.quest"
                                maxlength="255"
                                name="survey-question__myGroups.obj0Uuid.myNestedGroups.nestedObj0Uuid.quest"
                                style="text-transform: none;"
                                type="text"
                                value="Some answer"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="survey-group-object"
                    >
                      <div
                        class="content-container"
                      >
                        <div
                          class="survey-group-object__content"
                        >
                          <h3
                            class="survey-group-object__title"
                          >
                            <markdown
                              remarkplugins="remark-gfm,[object Object]"
                            >
                              Nested object at index 1
                            </markdown>
                          </h3>
                          <div
                            class="survey-section__text"
                          >
                            <div
                              class="left "
                            >
                              <markdown
                                remarkplugins="remark-gfm,[object Object]"
                              >
                                This is a text widget
                              </markdown>
                            </div>
                          </div>
                          <div
                            class="apptr__form-container question-type-string question-filled"
                            style="position: relative;"
                          >
                            <div
                              class="apptr__form-label-container"
                            >
                              <label
                                for="survey-question__myGroups.obj0Uuid.myNestedGroups.nestedObj1Uuid.quest"
                              >
                                <div
                                  class="label"
                                >
                                  <markdown>
                                    Test Question Label
                                  </markdown>
                                </div>
                              </label>
                            </div>
                            <div
                              class="apptr__form-input-container "
                            >
                              <input
                                autocomplete="none"
                                class="apptr__form-input apptr__input-string input-large"
                                id="survey-question__myGroups.obj0Uuid.myNestedGroups.nestedObj1Uuid.quest"
                                maxlength="255"
                                name="survey-question__myGroups.obj0Uuid.myNestedGroups.nestedObj1Uuid.quest"
                                style="text-transform: none;"
                                type="text"
                                value="Some other answer"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="center"
                    >
                      <button
                        class="button blue center large"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="svg-inline--fa fa-circle-plus faIconLeft"
                          data-icon="circle-plus"
                          data-prefix="fas"
                          role="img"
                          viewBox="0 0 512 512"
                        >
                          <path
                            d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM232 344l0-64-64 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l64 0 0-64c0-13.3 10.7-24 24-24s24 10.7 24 24l0 64 64 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-64 0 0 64c0 13.3-10.7 24-24 24s-24-10.7-24-24z"
                            fill="currentColor"
                          />
                        </svg>
                        widgetGroups.addGroupedObject
                      </button>
                    </div>
                  </div>
                </div>
              </section>
            </div>
          </div>
        </div>
        <div
          class="survey-group-object"
        >
          <div
            class="content-container"
          >
            <div
              class="survey-group-object__content"
            >
              <h3
                class="survey-group-object__title"
              >
                <markdown
                  remarkplugins="remark-gfm,[object Object]"
                >
                  Grouped object at index 1
                </markdown>
              </h3>
              <section
                class="survey-group"
              >
                <div
                  class="content-container"
                >
                  <div
                    class="survey-group__content"
                  >
                    <h2
                      class="survey-group__title"
                    >
                      Nested group title
                    </h2>
                    <div
                      class="center"
                    >
                      <button
                        class="button blue center large"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="svg-inline--fa fa-circle-plus faIconLeft"
                          data-icon="circle-plus"
                          data-prefix="fas"
                          role="img"
                          viewBox="0 0 512 512"
                        >
                          <path
                            d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM232 344l0-64-64 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l64 0 0-64c0-13.3 10.7-24 24-24s24 10.7 24 24l0 64 64 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-64 0 0 64c0 13.3-10.7 24-24 24s-24-10.7-24-24z"
                            fill="currentColor"
                          />
                        </svg>
                        widgetGroups.addGroupedObject
                      </button>
                    </div>
                  </div>
                </div>
              </section>
            </div>
          </div>
        </div>
        <div
          class="survey-group-object"
        >
          <div
            class="content-container"
          >
            <div
              class="survey-group-object__content"
            >
              <h3
                class="survey-group-object__title"
              >
                <markdown
                  remarkplugins="remark-gfm,[object Object]"
                >
                  Grouped object at index 2
                </markdown>
              </h3>
              <section
                class="survey-group"
              >
                <div
                  class="content-container"
                >
                  <div
                    class="survey-group__content"
                  >
                    <h2
                      class="survey-group__title"
                    >
                      Nested group title
                    </h2>
                    <div
                      class="center"
                    >
                      <button
                        class="button blue center large"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="svg-inline--fa fa-circle-plus faIconLeft"
                          data-icon="circle-plus"
                          data-prefix="fas"
                          role="img"
                          viewBox="0 0 512 512"
                        >
                          <path
                            d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM232 344l0-64-64 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l64 0 0-64c0-13.3 10.7-24 24-24s24 10.7 24 24l0 64 64 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-64 0 0 64c0 13.3-10.7 24-24 24s-24-10.7-24-24z"
                            fill="currentColor"
                          />
                        </svg>
                        widgetGroups.addGroupedObject
                      </button>
                    </div>
                  </div>
                </div>
              </section>
            </div>
          </div>
        </div>
        <div
          class="center"
        >
          <button
            class="button blue center large"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-circle-plus faIconLeft"
              data-icon="circle-plus"
              data-prefix="fas"
              role="img"
              viewBox="0 0 512 512"
            >
              <path
                d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM232 344l0-64-64 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l64 0 0-64c0-13.3 10.7-24 24-24s24 10.7 24 24l0 64 64 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-64 0 0 64c0 13.3-10.7 24-24 24s-24-10.7-24-24z"
                fill="currentColor"
              />
            </svg>
            myGroup.addGroupedObject
          </button>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Group With grouped object conditional filter, show only object 1 Render widget 1`] = `
<div>
  <section
    class="survey-group"
  >
    <div
      class="content-container"
    >
      <div
        class="survey-group__content"
      >
        <h2
          class="survey-group__title"
        >
          myGroup.title
        </h2>
        <div
          class="survey-group-object"
        >
          <div
            class="content-container"
          >
            <div
              class="survey-group-object__content"
            >
              <h3
                class="survey-group-object__title"
              >
                <markdown
                  remarkplugins="remark-gfm,[object Object]"
                >
                  Grouped object at index 1
                </markdown>
              </h3>
              <div
                class="survey-section__text"
              >
                <div
                  class="left "
                >
                  <markdown
                    remarkplugins="remark-gfm,[object Object]"
                  >
                    This is a text widget
                  </markdown>
                </div>
              </div>
              <div
                class="apptr__form-container question-type-string question-filled"
                style="position: relative;"
              >
                <div
                  class="apptr__form-label-container"
                >
                  <label
                    for="survey-question__myGroups.obj1Uuid.quest"
                  >
                    <div
                      class="label"
                    >
                      <markdown>
                        Test Question Label
                      </markdown>
                    </div>
                  </label>
                </div>
                <div
                  class="apptr__form-input-container "
                >
                  <input
                    autocomplete="none"
                    class="apptr__form-input apptr__input-string input-large"
                    id="survey-question__myGroups.obj1Uuid.quest"
                    maxlength="255"
                    name="survey-question__myGroups.obj1Uuid.quest"
                    style="text-transform: none;"
                    type="text"
                    value="Some other answer"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="center"
        >
          <button
            class="button blue center large"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-circle-plus faIconLeft"
              data-icon="circle-plus"
              data-prefix="fas"
              role="img"
              viewBox="0 0 512 512"
            >
              <path
                d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM232 344l0-64-64 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l64 0 0-64c0-13.3 10.7-24 24-24s24 10.7 24 24l0 64 64 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-64 0 0 64c0 13.3-10.7 24-24 24s-24-10.7-24-24z"
                fill="currentColor"
              />
            </svg>
            myGroup.addGroupedObject
          </button>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Group With object filter, show even sequenced objects Render widget 1`] = `
<div>
  <section
    class="survey-group"
  >
    <div
      class="content-container"
    >
      <div
        class="survey-group__content"
      >
        <h2
          class="survey-group__title"
        >
          myGroup.title
        </h2>
        <div
          class="survey-group-object"
        >
          <div
            class="content-container"
          >
            <div
              class="survey-group-object__content"
            >
              <h3
                class="survey-group-object__title"
              >
                <markdown
                  remarkplugins="remark-gfm,[object Object]"
                >
                  Grouped object at index 0
                </markdown>
              </h3>
              <div
                class="survey-section__text"
              >
                <div
                  class="left "
                >
                  <markdown
                    remarkplugins="remark-gfm,[object Object]"
                  >
                    This is a text widget
                  </markdown>
                </div>
              </div>
              <div
                class="apptr__form-container question-type-string question-filled"
                style="position: relative;"
              >
                <div
                  class="apptr__form-label-container"
                >
                  <label
                    for="survey-question__myGroups.obj0Uuid.quest"
                  >
                    <div
                      class="label"
                    >
                      <markdown>
                        Test Question Label
                      </markdown>
                    </div>
                  </label>
                </div>
                <div
                  class="apptr__form-input-container "
                >
                  <input
                    autocomplete="none"
                    class="apptr__form-input apptr__input-string input-large"
                    id="survey-question__myGroups.obj0Uuid.quest"
                    maxlength="255"
                    name="survey-question__myGroups.obj0Uuid.quest"
                    style="text-transform: none;"
                    type="text"
                    value="Some answer"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="survey-group-object"
        >
          <div
            class="content-container"
          >
            <div
              class="survey-group-object__content"
            >
              <h3
                class="survey-group-object__title"
              >
                <markdown
                  remarkplugins="remark-gfm,[object Object]"
                >
                  Grouped object at index 2
                </markdown>
              </h3>
              <div
                class="survey-section__text"
              >
                <div
                  class="left "
                >
                  <markdown
                    remarkplugins="remark-gfm,[object Object]"
                  >
                    This is a text widget
                  </markdown>
                </div>
              </div>
              <div
                class="apptr__form-container question-type-string question-filled"
                style="position: relative;"
              >
                <div
                  class="apptr__form-label-container"
                >
                  <label
                    for="survey-question__myGroups.obj2Uuid.quest"
                  >
                    <div
                      class="label"
                    >
                      <markdown>
                        Test Question Label
                      </markdown>
                    </div>
                  </label>
                </div>
                <div
                  class="apptr__form-input-container "
                >
                  <input
                    autocomplete="none"
                    class="apptr__form-input apptr__input-string input-large"
                    id="survey-question__myGroups.obj2Uuid.quest"
                    maxlength="255"
                    name="survey-question__myGroups.obj2Uuid.quest"
                    style="text-transform: none;"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="center"
        >
          <button
            class="button blue center large"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-circle-plus faIconLeft"
              data-icon="circle-plus"
              data-prefix="fas"
              role="img"
              viewBox="0 0 512 512"
            >
              <path
                d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM232 344l0-64-64 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l64 0 0-64c0-13.3 10.7-24 24-24s24 10.7 24 24l0 64 64 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-64 0 0 64c0 13.3-10.7 24-24 24s-24-10.7-24-24z"
                fill="currentColor"
              />
            </svg>
            myGroup.addGroupedObject
          </button>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Grouped Object All values set, add/delete button false Render widget 1`] = `
<div>
  <div
    class="survey-group-object"
  >
    <div
      class="content-container"
    >
      <div
        class="survey-group-object__content"
      >
        <h3
          class="survey-group-object__title"
        >
          <markdown
            remarkplugins="remark-gfm,[object Object]"
          >
            Grouped object at index 0
          </markdown>
        </h3>
        <div
          class="survey-section__text"
        >
          <div
            class="left "
          >
            <markdown
              remarkplugins="remark-gfm,[object Object]"
            >
              This is a text widget
            </markdown>
          </div>
        </div>
        <div
          class="apptr__form-container question-type-string question-filled"
          style="position: relative;"
        >
          <div
            class="apptr__form-label-container"
          >
            <label
              for="survey-question__myGroups.obj0Uuid.quest"
            >
              <div
                class="label"
              >
                <markdown>
                  Test Question Label
                </markdown>
              </div>
            </label>
          </div>
          <div
            class="apptr__form-input-container "
          >
            <input
              autocomplete="none"
              class="apptr__form-input apptr__input-string input-large"
              id="survey-question__myGroups.obj0Uuid.quest"
              maxlength="255"
              name="survey-question__myGroups.obj0Uuid.quest"
              style="text-transform: none;"
              type="text"
              value="Some answer"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Grouped Object All values set, all true, add button default label, filter show all Render widget 1`] = `
<div>
  <div
    class="survey-group-object"
  >
    <div
      class="content-container"
    >
      <div
        class="survey-group-object__content"
      >
        <h3
          class="survey-group-object__title"
        >
          <markdown
            remarkplugins="remark-gfm,[object Object]"
          >
            Grouped object at index 0
          </markdown>
        </h3>
        <div
          class="center"
        >
          <button
            class="button red small"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-trash-can faIconLeft"
              data-icon="trash-can"
              data-prefix="fas"
              role="img"
              viewBox="0 0 448 512"
            >
              <path
                d="M136.7 5.9C141.1-7.2 153.3-16 167.1-16l113.9 0c13.8 0 26 8.8 30.4 21.9L320 32 416 32c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 96C14.3 96 0 81.7 0 64S14.3 32 32 32l96 0 8.7-26.1zM32 144l384 0 0 304c0 35.3-28.7 64-64 64L96 512c-35.3 0-64-28.7-64-64l0-304zm88 64c-13.3 0-24 10.7-24 24l0 192c0 13.3 10.7 24 24 24s24-10.7 24-24l0-192c0-13.3-10.7-24-24-24zm104 0c-13.3 0-24 10.7-24 24l0 192c0 13.3 10.7 24 24 24s24-10.7 24-24l0-192c0-13.3-10.7-24-24-24zm104 0c-13.3 0-24 10.7-24 24l0 192c0 13.3 10.7 24 24 24s24-10.7 24-24l0-192c0-13.3-10.7-24-24-24z"
                fill="currentColor"
              />
            </svg>
            Delete this grouped object from my group
          </button>
        </div>
        <div
          class="survey-section__text"
        >
          <div
            class="left "
          >
            <markdown
              remarkplugins="remark-gfm,[object Object]"
            >
              This is a text widget
            </markdown>
          </div>
        </div>
        <div
          class="apptr__form-container question-type-string question-filled"
          style="position: relative;"
        >
          <div
            class="apptr__form-label-container"
          >
            <label
              for="survey-question__myGroups.obj0Uuid.quest"
            >
              <div
                class="label"
              >
                <markdown>
                  Test Question Label
                </markdown>
              </div>
            </label>
          </div>
          <div
            class="apptr__form-input-container "
          >
            <input
              autocomplete="none"
              class="apptr__form-input apptr__input-string input-large"
              id="survey-question__myGroups.obj0Uuid.quest"
              maxlength="255"
              name="survey-question__myGroups.obj0Uuid.quest"
              style="text-transform: none;"
              type="text"
              value="Some answer"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Grouped Object Default values Render widget 1`] = `
<div>
  <div
    class="survey-group-object"
  >
    <div
      class="content-container"
    >
      <div
        class="survey-group-object__content"
      >
        <div
          class="survey-section__text"
        >
          <div
            class="left "
          >
            <markdown
              remarkplugins="remark-gfm,[object Object]"
            >
              This is a text widget
            </markdown>
          </div>
        </div>
        <div
          class="apptr__form-container question-type-string question-filled"
          style="position: relative;"
        >
          <div
            class="apptr__form-label-container"
          >
            <label
              for="survey-question__myGroups.obj0Uuid.quest"
            >
              <div
                class="label"
              >
                <markdown>
                  Test Question Label
                </markdown>
              </div>
            </label>
          </div>
          <div
            class="apptr__form-input-container "
          >
            <input
              autocomplete="none"
              class="apptr__form-input apptr__input-string input-large"
              id="survey-question__myGroups.obj0Uuid.quest"
              maxlength="255"
              name="survey-question__myGroups.obj0Uuid.quest"
              style="text-transform: none;"
              type="text"
              value="Some answer"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
